devel
-----

* Enforce a maximum result register usage limit in AQL queries. In an AQL
  query, every user-defined or internal (unnamed) variable will need a 
  register to store results in.

  AQL queries that use more result registers than allowed (currently 1000) 
  will now abort deterministically during the planning stage with error 32 
  (`resource limit exceeded`) and the error message 
  "too many registers (1000) needed for AQL query".

  Before this fix, an AQL query that used more than 1000 result registers
  crashed the server when assertions were turned on, and the behavior was 
  undefined when assertions were turned off.

* Implement RebootTracker usage for AQL queries in case of coordinator
  restarts or failures. This will clean up the rest of an AQL query
  on dbservers more quickly and in particular release locks faster.

* Serialize maintenance actions for each shard. This addresses lost document
  problems found in chaos testing.

* Fixed an issue with audit logging misreporting some document requests as 
  internal instead of logging the proper request information

* Add option `--rocksdb.max-write-buffer-size-to-maintain` with default of 0.
  This configures how much memory RocksDB is allowed to use for immutable
  flushed memtables/write-buffers. The default of 0 will usually be good
  for all purposes and restores the 3.6 memory usage for write-buffers.

* Updated arangosync to 0.7.10.

* Make followers in active failover run a compaction after they process a
  truncate operation and the truncate removed more than 4k documents. This
  can help to reclaim disk space on the follower earlier than without running
  the truncate.

* Added REST API PUT `/_admin/compact` for compacting the entire database
  data. This endpoint can be used to reclaim disk space after substantial data 
  deletions have taken place. The command is also exposed via the JavaScript
  API as `db._compact();`.
