@@ -63,10 +63,9 @@ bool Parser::configureWriteQuery(AstNode const* collectionNode, AstNode* optionN
   bool isExclusiveAccess = false;
 
   if (optionNode != nullptr) {
-    if (!optionNode->isConstant()) {
-      _query.warnings().registerError(TRI_ERROR_QUERY_COMPILE_TIME_OPTIONS);
-    }
-
+    // already validated at parse-time
+    TRI_ASSERT(optionNode->isObject());
+    TRI_ASSERT(optionNode->isConstant());
     isExclusiveAccess = ExecutionPlan::hasExclusiveAccessOption(optionNode);
   }
 
@@ -173,12 +172,7 @@ void Parser::registerParseError(int errorCode, char const* data, int line, int c
     errorMessage << '^' << '^' << std::endl;
   }
 
-  registerError(errorCode, errorMessage.str().c_str());
-}
-
-/// @brief register a non-parse error
-void Parser::registerError(int errorCode, char const* data) {
-  _query.warnings().registerError(errorCode, data);
+  _query.warnings().registerError(errorCode, errorMessage.str().c_str());
 }
 
 /// @brief register a warning
@@ -190,6 +184,7 @@ void Parser::registerWarning(int errorCode, char const* data, int line, int colu
 /// @brief push an AstNode array element on top of the stack
 /// the array must be removed from the stack via popArray
 void Parser::pushArray(AstNode* array) {
+  TRI_ASSERT(array != nullptr);
   TRI_ASSERT(array->type == NODE_TYPE_ARRAY);
   array->setFlag(DETERMINED_CONSTANT, VALUE_CONSTANT);
   pushStack(array);
@@ -205,6 +200,7 @@ AstNode* Parser::popArray() {
 
 /// @brief push an AstNode into the array element on top of the stack
 void Parser::pushArrayElement(AstNode* node) {
+  TRI_ASSERT(node != nullptr);
   auto array = static_cast<AstNode*>(peekStack());
   TRI_ASSERT(array->type == NODE_TYPE_ARRAY);
   array->addMember(node);
@@ -216,6 +212,7 @@ void Parser::pushArrayElement(AstNode* node) {
 /// @brief push an AstNode into the object element on top of the stack
 void Parser::pushObjectElement(char const* attributeName, size_t nameLength, AstNode* node) {
   auto object = static_cast<AstNode*>(peekStack());
+  TRI_ASSERT(object != nullptr);
   TRI_ASSERT(object->type == NODE_TYPE_OBJECT);
   auto element = _ast.createNodeObjectElement(attributeName, nameLength, node);
   object->addMember(element);
@@ -224,19 +221,24 @@ void Parser::pushObjectElement(char const* attributeName, size_t nameLength, Ast
 /// @brief push an AstNode into the object element on top of the stack
 void Parser::pushObjectElement(AstNode* attributeName, AstNode* node) {
   auto object = static_cast<AstNode*>(peekStack());
+  TRI_ASSERT(object != nullptr);
   TRI_ASSERT(object->type == NODE_TYPE_OBJECT);
   auto element = _ast.createNodeCalculatedObjectElement(attributeName, node);
   object->addMember(element);
 }
 
 /// @brief push a temporary value on the parser's stack
-void Parser::pushStack(void* value) { _stack.emplace_back(value); }
+void Parser::pushStack(void* value) {
+  TRI_ASSERT(value != nullptr);
+  _stack.emplace_back(value); 
+}
 
 /// @brief pop a temporary value from the parser's stack
 void* Parser::popStack() {
   TRI_ASSERT(!_stack.empty());
 
   void* result = _stack.back();
+  TRI_ASSERT(result != nullptr);
   _stack.pop_back();
   return result;
 }
