@@ -106,10 +106,7 @@ class Parser {
 
   /// @brief register a parse error, position is specified as line / column
   void registerParseError(int, char const*, int, int);
-
-  /// @brief register a non-parse error
-  void registerError(int, char const* = nullptr);
-
+  
   /// @brief register a warning
   void registerWarning(int, char const*, int, int);
 
