@@ -46,9 +46,9 @@ public:
   explicit QueryWarnings();
   ~QueryWarnings() = default;
 
-  /// @brief register an error, with an optional parameter inserted into printf
+  /// @brief register an error
   /// this also makes the query abort
-  void registerError(int, char const* = nullptr);
+  [[noreturn]] void registerError(int, char const* = nullptr);
 
   /// @brief register a warning
   void registerWarning(int, char const* = nullptr);
@@ -63,6 +63,8 @@ public:
   void updateOptions(QueryOptions const&);
   
   std::vector<std::pair<int, std::string>> all() const;
+
+  static std::string buildFormattedString(int code, char const* details);
   
  private:
   
